--- a/index.html
+++ b/index.html
@@ -17,11 +17,17 @@
             cursor: pointer; font-size: 16px;
             margin-top: 20px;
             border-radius: 10px;
+            
+        }
+        button:hover{
+            background-color: white;
+            color: blue;
         }
         #Balloon{
             font-size: 50px;
             margin: 20px;
             display: block;
+            
         }
         #Reset{
             display: none;
